End-to-end minimally working

--- a/web/index.html
+++ b/web/index.html
@@ -1,7 +1,14 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <script src="/node_modules/CreateJS/builds/createjs-2015.11.26.combined.js"></script>
         <script data-main="/web/scripts/main.js" src="/node_modules/requirejs/require.js"></script>
     </head>
-    <body></body>
+    <body>
+        <div id="animation_container" style="background-color:rgba(204, 204, 204, 1.00); width:1080px; height:720px">
+            <canvas id="canvas" width="1080" height="720" style="position: absolute; display: block; background-color:rgba(204, 204, 204, 1.00);"></canvas>
+            <div id="dom_overlay_container" style="pointer-events:none; overflow:hidden; width:1080px; height:720px; position: absolute; left: 0px; top: 0px; display: block;">
+            </div>
+        </div>
+    </body>
 </html>
