--- a/examples/basic/animate-output/wombat.html
+++ b/examples/basic/animate-output/wombat.html
@@ -14,7 +14,7 @@
 <title>wombat</title>
 <!-- write your code here -->
 <script src="https://code.createjs.com/createjs-2015.11.26.min.js"></script>
-<script src="wombat.js"></script>
+<script src="wombat.js?1481671387817"></script>
 <script>
 var canvas, stage, exportRoot, anim_container, dom_overlay_container, fnStartAnimation;
 function init() {
