--- a/web/index.html
+++ b/web/index.html
@@ -1,14 +1,30 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <script type="text/javascript">
+            function startCanvas(exportRoot, lib) {
+                var canvas, stage, anim_container, dom_overlay_container, fnStartAnimation;
+                canvas = document.getElementById("canvas");
+                anim_container = document.getElementById("animation_container");
+                dom_overlay_container = document.getElementById("dom_overlay_container");
+
+                stage = new createjs.Stage(canvas);
+                stage.addChild(exportRoot);
+                //Registers the "tick" event listener.
+                fnStartAnimation = function() {
+                    createjs.Ticker.setFPS(lib.properties.fps);
+                    createjs.Ticker.addEventListener("tick", stage);
+                }
+                fnStartAnimation();
+
+            }
+        </script>
         <script src="/node_modules/CreateJS/builds/createjs-2015.11.26.combined.js"></script>
-        <script data-main="/web/scripts/main.js" src="/node_modules/requirejs/require.js"></script>
     </head>
-    <body>
-        <div id="animation_container" style="background-color:rgba(204, 204, 204, 1.00); width:1080px; height:720px">
-            <canvas id="canvas" width="1080" height="720" style="position: absolute; display: block; background-color:rgba(204, 204, 204, 1.00);"></canvas>
-            <div id="dom_overlay_container" style="pointer-events:none; overflow:hidden; width:1080px; height:720px; position: absolute; left: 0px; top: 0px; display: block;">
-            </div>
+    <body style="margin:0; padding: 0; line-height: 0">
+        <div id="animation_container">
+            <canvas id="canvas"></canvas>
+            <div id="dom_overlay_container"></div>
         </div>
     </body>
 </html>
