--- a/web/index.html
+++ b/web/index.html
@@ -1,30 +1,43 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <script type="text/javascript">
-            function startCanvas(exportRoot, lib) {
-                var canvas, stage, anim_container, dom_overlay_container, fnStartAnimation;
-                canvas = document.getElementById("canvas");
-                anim_container = document.getElementById("animation_container");
-                dom_overlay_container = document.getElementById("dom_overlay_container");
+<head>
+    <style type="text/css">
+        body {margin: 0; padding: 0}
 
-                stage = new createjs.Stage(canvas);
-                stage.addChild(exportRoot);
-                //Registers the "tick" event listener.
-                fnStartAnimation = function() {
-                    createjs.Ticker.setFPS(lib.properties.fps);
-                    createjs.Ticker.addEventListener("tick", stage);
-                }
-                fnStartAnimation();
+        #preOverlay textarea.hide { display: none; }
 
-            }
-        </script>
-        <script src="/node_modules/CreateJS/builds/createjs-2015.11.26.combined.js"></script>
-    </head>
-    <body style="margin:0; padding: 0; line-height: 0">
-        <div id="animation_container">
-            <canvas id="canvas"></canvas>
-            <div id="dom_overlay_container"></div>
+        #preOverlay {
+            position: absolute;
+            top: 0;
+            right: 0;
+            width: 50%;
+            background: #E1E1E1;
+            padding: 0 1em;
+        }
+
+        #ui {
+            padding: 1em;
+        }
+
+        #preOverlay textarea {
+            border: 3px dashed #666666;
+            font-family: Consolas, 'Liberation Mono', Menlo, Courier, monospace;
+            font-size: 14px;
+            width: 100%;
+            height: 200px;
+        }
+    </style>
+    <script data-main="/web/scripts/upload.js" src="/node_modules/requirejs/require.js"></script>
+</head>
+<body>
+    <div id="ui">
+        <div id="preOverlay">
+            <p><button id="togglePre">UMD output</button></p>
+            <p><textarea class="hide" readonly></textarea></p>
         </div>
-    </body>
+        <form action="" name="uploader">
+            <input name="file" type="file" />
+        </form>
+    </div>
+</body>
 </html>
