--- a/web/preview.html
+++ b/web/preview.html
@@ -19,7 +19,7 @@
 
             }
         </script>
-        <script src="/node_modules/CreateJS/builds/createjs-2015.11.26.combined.js"></script>
+        <script src="//code.createjs.com/createjs-2015.11.26.combined.js"></script>
     </head>
     <body style="margin:0; padding: 0; line-height: 0">
         <div id="animation_container">
