Isolate web folder for github.io publication and add copy:vendor task runner

--- a/web/index.html
+++ b/web/index.html
@@ -27,7 +27,7 @@
             height: 200px;
         }
     </style>
-    <script data-main="/web/scripts/upload.js" src="/node_modules/requirejs/require.js"></script>
+    <script data-main="scripts/upload.js" src="scripts/vendor/require.js"></script>
 </head>
 <body>
     <div id="ui">
